@@ -76,6 +76,7 @@ wesnoth_source = \
 	gui/dialogs/mp_create_game.cpp \
 	gui/dialogs/mp_method_selection.cpp \
 	gui/dialogs/title_screen.cpp \
+	gui/dialogs/wml_message.cpp \
 	gui/widgets/button.cpp \
 	gui/widgets/debug.cpp \
 	gui/widgets/canvas.cpp \
